--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "async-redis": "^2.0.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "generate-password": "^1.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
+    "multer": "^1.4.3",
     "redis": "^3.1.2"
   }
 }
